recursion.lessons.recursion.koch.Crab.scala.error
Crab:9: error: not found: value snowSide
		snowSide(levels-1,length/Math.sqrt(2))
                ^Crab:11: error: not found: value snowSide
		snowSide(levels-1,length/Math.sqrt(2))
                ^Crab:12: error: not enough arguments for method droite: (x$1: Double)Unit.
Unspecified value parameter x$1.
		droite()
                      ^