recursion.lessons.recursion.koch.Crab.scala.code
def crab(levels:Int, length:Double) {

	if(levels==0){
		avance(length)
	}

	else{
		snowSide(levels-1,length/Math.sqrt(2))
		droite(45)
		snowSide(levels-1,length/Math.sqrt(2))
		droite()

	}

}
